# build
SET(TARGET_APP nugu_sample)
INCLUDE_DIRECTORIES(capability)
FILE(GLOB_RECURSE SRC *.cc)
ADD_EXECUTABLE(${TARGET_APP} ${SRC})
TARGET_LINK_LIBRARIES(${TARGET_APP}
	${pkgs_LDFLAGS}
	-L${CMAKE_BINARY_DIR}/src -lnugu -lasound)
ADD_DEPENDENCIES(${TARGET_APP} libnugu)

# install
INSTALL(TARGETS ${TARGET_APP} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
