# build
SET(TARGET_APP nugu_sample)
FILE(GLOB_RECURSE SRC *.cc)
ADD_EXECUTABLE(${TARGET_APP} ${SRC})
TARGET_INCLUDE_DIRECTORIES(${TARGET_APP} PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}
	capability
	clientkit)
TARGET_LINK_LIBRARIES(${TARGET_APP} ${pkgs_LDFLAGS} -lnugu)
ADD_DEPENDENCIES(${TARGET_APP} libnugu)

# install
INSTALL(TARGETS ${TARGET_APP} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	COMPONENT libnugu)
