FILE(GLOB_RECURSE CAPABILITY_SRC *.cc)
ADD_LIBRARY(objcapability OBJECT ${CAPABILITY_SRC})
TARGET_INCLUDE_DIRECTORIES(objcapability PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR})
IF(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    SET_TARGET_PROPERTIES(objcapability PROPERTIES
        COMPILE_PDB_NAME "objcapability"
        COMPILE_PDB_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
ENDIF()
