FILE(GLOB_RECURSE CLIENTKIT_SRC *.cc)
ADD_LIBRARY(objclientkit OBJECT ${CLIENTKIT_SRC})
TARGET_INCLUDE_DIRECTORIES(objclientkit PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/../)
set_target_properties(objclientkit PROPERTIES
    COMPILE_PDB_NAME "objclientkit"
    COMPILE_PDB_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
)
