FILE(GLOB_RECURSE CORE_SRC *.cc capability/*.cc)
ADD_LIBRARY(objcore OBJECT ${CORE_SRC})
TARGET_INCLUDE_DIRECTORIES(objcore PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR})
IF(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
	TARGET_COMPILE_DEFINITIONS(objcore PRIVATE
		-DNUGU_LIBRARY_BUILD)
ENDIF()
    set_target_properties(objcore PROPERTIES
    COMPILE_PDB_NAME "objcore"
    COMPILE_PDB_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
)
